changed route /user/logs
