# src/routes/users.js
@@ -3,8 +3,6 @@ const router = express.Router()
 const controller = require('../controllers/UserController')
 const { authenticate, authenticateForRestoreUser, authorizeForRestoreUser, authorize } = require('../middlewares/auth')
 
-router.get('/logs', authorize, controller.getAllLogs)
-
 router.post('/signup', controller.create)
 
 router.post('/signin', authenticate)
